# electripyyy_lab

./: .gitignore  README.md  SECURITY_AUDIT.md  biophysics_em_toys.ipynb  pyproject.toml
src/emtoys/: __init__.py  constants.py  finite_difference.py  optics.py  transport.py  waves.py
