[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "biophysics-em-toys"
version = "0.1.0"
description = "Teaching helpers mirrored from the Biophysics EM Toys notebook."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "ipywidgets",
]

[tool.setuptools.packages.find]
where = ["src"]
